--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
@@ -36,6 +36,6 @@
         </div>
     </div>
 
-    <script src="js/core.js"></script> <!-- Подключение JavaScript файла -->
+    <script src="core.js"></script> <!-- Подключение JavaScript файла -->
 </body>
 </html>
