--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Калькулятор</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,7 +35,6 @@
             <button class="btn equal" onclick="calculateResult()">=</button>
         </div>
     </div>
-
-    <script src="core.js"></script> <!-- Подключение JavaScript файла -->
+    <script src="core.js"></script>
 </body>
 </html>
